fix bug where input to edit invitation password was not visible

--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -19,7 +19,7 @@
 }
 #invitation-settings .edit-link {
 	cursor: text;
-	margin-left: 1rem;
+	margin-left: 0.5rem;
 }
 
 .menu.icon-left>li.invitation-hide,
@@ -58,17 +58,4 @@ li>label.self-registration-label.private {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-}
-
-.spaces-invitation-edit-modal {
-	position: absolute;
-	z-index: 1;
-	transform: translateY(100%);
-	display: flex;
-	left: 20px;
-}
-
-.spaces-invitation-edit-modal input {
-	width: 200px;
-
 }
